<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dp"
    android:textAlignment="center">


    <ImageView
        android:src="@drawable/logo_orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/app_name" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:text="@string/sign_in"/>

    <EditText
        android:id="@+id/emailEditText"
        android:inputType="textEmailAddress"
        android:autofillHints="@string/helper_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:strokeColor="@color/accent_1"
        app:strokeWidth="5dp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:inputType="textPassword"
        android:autofillHints="@string/helper_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:strokeColor="@color/accent_1"
        app:strokeWidth="5dp" />

    <Button
        android:id="@+id/btnLogIn"
        android:text="@string/log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>