<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dp"
    android:textAlignment="center">

    <ImageView
        android:src="@drawable/logo_orange"
        android:contentDescription="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <TextView
        android:text="@string/thank_you_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="@dimen/h4_text" />

    <TextView
        android:text="@string/account_confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="@dimen/p_text" />

    <Button
        android:id="@+id/btnSubmit"
        android:text="@string/log_in"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:textSize="@dimen/h5_text"
        app:strokeColor="@color/accent_1"
        app:strokeWidth="5dp" />
</LinearLayout>