<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:textAlignment="center">


    <ImageView
        android:src="@drawable/logo_orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/app_name" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/margin_height"
        android:textSize="@dimen/h4_text"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="@dimen/margin_height"
        android:text="@string/log_in"
        android:textSize="@dimen/h5_text"
        app:strokeColor="@color/accent_1"
        app:strokeWidth="5dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="@dimen/margin_height"
        android:text="@string/register"
        android:textSize="@dimen/h5_text"
        android:background="@color/white"
        app:strokeColor="@color/primary_1"
        app:strokeWidth="5dp" />
</LinearLayout>