<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/access_device"
        android:textSize="@dimen/h4_text"
        android:textAlignment="center" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"

            android:text="@string/allow"
            android:layout_margin="15dp"
            android:textSize="@dimen/h5_text"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/deny"
            android:layout_margin="15dp"
            android:textSize="@dimen/h5_text"/>

    </LinearLayout>


</LinearLayout>